# expression_parser

./: .gitignore  README.md  pyproject.toml
config/: aggregation_mean.json  aggregation_sum.json  binary_addition.json  config.json  full_pipeline.json  literal_value.json
config/additional_config/: binary_subtraction.json  column_selection.json  filter_multiple.json  filter_single.json  multi_plot_config.json  sample_config.json
data/: business_sales.csv  sales_analysis.json  sample_data.csv
demo/: demo_plot.py
docs/: AI_tool_prompts.txt  Sample_AST.docx
expression_parser/: aggregations.py  ast.py  config_validator.py  csv_validator.py  evaluator.py  exceptions.py  expression_builder.py  filters.py  parser.py
tests/: __init__.py  conftest.py  test_parser.py
