[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expression-parser"
version = "0.1.0"
description = "Config-driven expression parser for Pandas DataFrames"
authors = [{ name = "Chaitanya Dave" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]